[package]
name = "template-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
clap = { version = "^4.5.58", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["from"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slab = "0.4.12"
